# axum-template

./: docker-compose.yaml  jaeger-ui.json  prometheus.yml
axum-template/: Cargo.toml  Dockerfile
axum-template/src/: main.rs
