[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6.20", features = ["tracing"] }
tracing-opentelemetry-instrumentation-sdk = "0.14.1"
axum-tracing-opentelemetry = "0.14.1"
init-tracing-opentelemetry ={ version = "0.14.1", features = ["otlp", "tracing_subscriber_ext"] }
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13", optional = true }
serde_json = "1.0.79"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17"}
autometrics = { version = "*", features = ["prometheus-exporter"] }
